<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.ajcortes.proyectoinicio.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_noticeFragment"
            app:destination="@id/noticeFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.ajcortes.proyectoinicio.MenuFragment"
        android:label="@string/fragment_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_menuFragment_to_filmsFragment"
            app:destination="@id/filmsFragment" />
        <action
            android:id="@+id/action_menuFragment_to_favouriteFilmsFragment"
            app:destination="@id/favouriteFilmsFragment" />
        <action
            android:id="@+id/action_menuFragment_to_userFragment"
            app:destination="@id/userFragment" />
        <action
            android:id="@+id/action_menuFragment_to_creditFragment"
            app:destination="@id/creditFragment" />
        <action
            android:id="@+id/action_menuFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/filmsFragment"
        android:name="com.ajcortes.proyectoinicio.FilmsFragment"
        android:label="@string/fragment_films"
        tools:layout="@layout/fragment_films" >
        <action
            android:id="@+id/action_filmsFragment_to_detailsFilmFragment"
            app:destination="@id/detailsFilmFragment" />
        <action
            android:id="@+id/action_filmsFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFilmsFragment"
        android:name="com.ajcortes.proyectoinicio.FavouriteFilmsFragment"
        android:label="@string/fragment_favourite_films"
        tools:layout="@layout/fragment_favourite_films" >
        <action
            android:id="@+id/action_favouriteFilmsFragment_to_detailsFilmFavFragment"
            app:destination="@id/detailsFilmFavFragment" />
        <action
            android:id="@+id/action_favouriteFilmsFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/userFragment"
        android:name="com.ajcortes.proyectoinicio.UserFragment"
        android:label="@string/fragment_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_userFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/creditFragment"
        android:name="com.ajcortes.proyectoinicio.CreditFragment"
        android:label="@string/fragment_credit"
        tools:layout="@layout/fragment_credit" >
        <action
            android:id="@+id/action_creditFragment_to_menuFragment2"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFilmFragment"
        android:name="com.ajcortes.proyectoinicio.DetailsFilmFragment"
        android:label="@string/fragment_details_film"
        tools:layout="@layout/fragment_details_film" >
        <action
            android:id="@+id/action_detailsFilmFragment_to_filmsFragment"
            app:destination="@id/filmsFragment" />
        <argument android:name="film"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/detailsFilmFavFragment"
        android:name="com.ajcortes.proyectoinicio.DetailsFilmFavFragment"
        android:label="@string/fragment_details_film"
        tools:layout="@layout/fragment_details_film_fav" >
        <action
            android:id="@+id/action_detailsFilmFavFragment_to_favouriteFilmsFragment"
            app:destination="@id/favouriteFilmsFragment" />
        <argument
            android:name="film"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/noticeFragment"
        android:name="com.ajcortes.proyectoinicio.NoticeFragment"
        android:label="@string/fragment_notice"
        tools:layout="@layout/fragment_notice" >
        <action
            android:id="@+id/action_noticeFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>


</navigation>